// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About render to match snapshot 1`] = `
<div
  className="container mx-auto text-center"
>
  <h1
    araia-label="about heading"
    className="about display-1"
    data-testid="about"
  >
    About
  </h1>
  <p
    data-testid="p1"
  >
    This is a CS465/565 Final Project by Ariel, Cera, and Alex
  </p>
  <p
    data-testid="p2"
  >
    We wanted to implement a game using Node.js, React.js, Express.js, and Socket.io
  </p>
  <p
    data-testid="p3"
  >
    We decided on a Tic-Tac-Toe game
  </p>
  <p
    data-testid="p4"
  >
    Our project code can be found in: 
  </p>
  <p>
    <a
      araia-label="github link code"
      data-testid="link-project"
      href="https://github.com/gleason9113/465final"
      rel="noreferrer"
      target="_blank"
    >
      Project
    </a>
  </p>
  <p>
    More about each of us can be found in:
  </p>
  <p>
    <a
      araia-label="github link cera"
      data-testid="cera-git"
      href="https://github.com/C3ra906"
      rel="noreferrer"
      target="_blank"
    >
      Cera's Github
    </a>
  </p>
  <p>
    <a
      araia-label="github link alex"
      data-testid="alex-git"
      href="https://github.com/sashetov"
      rel="noreferrer"
      target="_blank"
    >
      Alex's Github
    </a>
  </p>
  <p>
    <a
      araia-label="github link ariel"
      data-testid="ariel-git"
      href="https://github.com/gleason9113"
      rel="noreferrer"
      target="_blank"
    >
      Ariel's Github
    </a>
  </p>
</div>
`;

exports[`Board render to match snapshot when game is finished 1`] = `
<div
  className="container-sm w-50"
>
  <div
    aria-label="row-0"
    className="row"
  >
    <div
      aria-label="cell 0"
      className="col cell text-center"
      id="0"
      onClick={[Function]}
    />
    <div
      aria-label="cell 1"
      className="col cell text-center"
      id="1"
      onClick={[Function]}
    />
    <div
      aria-label="cell 2"
      className="col cell text-center"
      id="2"
      onClick={[Function]}
    />
  </div>
  <div
    aria-label="row-1"
    className="row text-center"
  >
    <div
      aria-label="cell 3"
      className="col cell text-center"
      id="3"
      onClick={[Function]}
    />
    <div
      aria-label="cell 4"
      className="col cell text-center"
      id="4"
      onClick={[Function]}
    />
    <div
      aria-label="cell 5"
      className="col cell text-center"
      id="5"
      onClick={[Function]}
    />
  </div>
  <div
    aria-label="row-2"
    className="row"
  >
    <div
      aria-label="cell 6"
      className="col cell text-center"
      id="6"
      onClick={[Function]}
    />
    <div
      aria-label="cell 7"
      className="col cell text-center"
      id="7"
      onClick={[Function]}
    />
    <div
      aria-label="cell 8"
      className="col cell text-center"
      id="8"
      onClick={[Function]}
    />
  </div>
  <div
    className="row"
    style={
      Object {
        "margin": "20px",
      }
    }
  />
  <div
    className="row"
  >
    <div
      aria-label="message board"
      className="col message text-center"
      id="user_message"
    />
  </div>
</div>
`;

exports[`Board render to match snapshot when game is not finished 1`] = `
<div
  className="container-sm w-50"
>
  <div
    aria-label="row-0"
    className="row"
  >
    <div
      aria-label="cell 0"
      className="col cell text-center"
      id="0"
      onClick={[Function]}
    />
    <div
      aria-label="cell 1"
      className="col cell text-center"
      id="1"
      onClick={[Function]}
    />
    <div
      aria-label="cell 2"
      className="col cell text-center"
      id="2"
      onClick={[Function]}
    />
  </div>
  <div
    aria-label="row-1"
    className="row text-center"
  >
    <div
      aria-label="cell 3"
      className="col cell text-center"
      id="3"
      onClick={[Function]}
    />
    <div
      aria-label="cell 4"
      className="col cell text-center"
      id="4"
      onClick={[Function]}
    />
    <div
      aria-label="cell 5"
      className="col cell text-center"
      id="5"
      onClick={[Function]}
    />
  </div>
  <div
    aria-label="row-2"
    className="row"
  >
    <div
      aria-label="cell 6"
      className="col cell text-center"
      id="6"
      onClick={[Function]}
    />
    <div
      aria-label="cell 7"
      className="col cell text-center"
      id="7"
      onClick={[Function]}
    />
    <div
      aria-label="cell 8"
      className="col cell text-center"
      id="8"
      onClick={[Function]}
    />
  </div>
  <div
    className="row"
    style={
      Object {
        "margin": "20px",
      }
    }
  />
  <div
    className="row"
  >
    <div
      aria-label="message board"
      className="col message text-center"
      id="user_message"
    />
  </div>
</div>
`;

exports[`ButtonHanddler render to match snapshot 1`] = `
<div>
  <div
    className="nav-container"
  >
    <button
      className="nav-btn"
      data-testid="home_button"
      id="home"
      onClick={[Function]}
      type="button"
    >
      Home
    </button>
    <button
      className="nav-btn"
      data-testid="about_button"
      id="about"
      onClick={[Function]}
      type="button"
    >
      About
    </button>
    <button
      className="nav-btn"
      data-testid="connect_button"
      id="connect"
      onClick={[Function]}
      type="button"
    >
      Connect
    </button>
    <button
      className="nav-btn"
      data-testid="howToPlay_button"
      id="how"
      onClick={[Function]}
      type="button"
    >
      How To Play
    </button>
    <button
      className="nav-btn"
      data-testid="comment_button"
      id="comments"
      onClick={[Function]}
      type="button"
    >
      Comments
    </button>
  </div>
  <div>
    <div
      className="container mx-auto text-center"
    >
      <h1
        className="display-1"
      >
        Tic-Tac-Toe
      </h1>
    </div>
    <form
      class="form w-50 mx-auto mt-5 p-3"
      id="player"
      method="get"
      onSubmit={[Function]}
    >
      <div
        class="form-group mx-auto my-2"
      >
        <label
          class="py-2"
          for="name"
        >
          Please enter player name:
        </label>
        <input
          class="form-control"
          id="name"
          name="name"
          type="text"
        />
      </div>
      <div
        class="row form-group mx-auto mb-2"
      >
        <input
          class="col btn btn-primary my-2 px-5"
          name="submit"
          type="submit"
          value="Play"
        />
        <input
          class="col btn btn-secondary mx-1 my-2 px-5"
          name="reset"
          type="reset"
          value="Reset"
        />
      </div>
    </form>
  </div>
</div>
`;

exports[`Buttons render to match snapshot 1`] = `
<div
  className="nav-container"
>
  <button
    className="nav-btn"
    data-testid="home_button"
    id="home"
    onClick={[MockFunction]}
    type="button"
  >
    Home
  </button>
  <button
    className="nav-btn"
    data-testid="about_button"
    id="about"
    onClick={[MockFunction]}
    type="button"
  >
    About
  </button>
  <button
    className="nav-btn"
    data-testid="connect_button"
    id="connect"
    onClick={[MockFunction]}
    type="button"
  >
    Connect
  </button>
  <button
    className="nav-btn"
    data-testid="howToPlay_button"
    id="how"
    onClick={[MockFunction]}
    type="button"
  >
    How To Play
  </button>
  <button
    className="nav-btn"
    data-testid="comment_button"
    id="comments"
    onClick={[MockFunction]}
    type="button"
  >
    Comments
  </button>
</div>
`;

exports[`Comments render to match snapshot 1`] = `
<div
  className="comments_container"
>
  <h1
    aria-label="comments header"
    className="comments_header"
    data-testid="comments_header"
  >
    Comments
  </h1>
  <p
    aria-label="how to post comments"
    className="comments_explain"
    data-testid="comments_explain"
  >
    You can leave us comments by filling out the form in the Connect page!
  </p>
  <pre>
    <div
      aria-label="comment board"
      className="comments_display"
      data-testid="comments_display"
    >
      No comments received
    </div>
  </pre>
</div>
`;

exports[`Connect render to match snapshot 1`] = `
<div
  className="container mx-auto my-auto text-center"
>
  <form
    aria-label="connect form"
    className="connect_form form w-50 mx-auto mt-5 p-3"
    data-testid="connect_form"
    onSubmit={[Function]}
  >
    <h1
      aria-label="connect header"
      className="mt-2 mb-4 connect_header"
      data-testid="connect_header"
    >
      Let's Connect!
    </h1>
    <div
      className="form-group mx-auto my-2"
    >
      <label
        aria-label="name label"
        className="py-2 name_label"
        data-testid="name-label"
        htmlFor="name"
      >
        Name
      </label>
      <input
        aria-label="name field"
        className="form-control"
        data-testid="name"
        id="name"
        type="text"
      />
    </div>
    <div
      className="form-group mx-auto my-2"
    >
      <label
        aria-label="email label"
        className="py-2"
        data-testid="email-label"
        htmlFor="email"
      >
        Email
      </label>
      <input
        aria-label="email field"
        className="form-control"
        data-testid="email"
        id="email"
        type="email"
      />
    </div>
    <div
      className="form-group mx-auto my-2"
    >
      <label
        aria-label="comments label"
        className="py-2"
        data-testid="comments-label"
        htmlFor="comments"
      >
        Comments
      </label>
      <textarea
        aria-label="comments field"
        className="form-control"
        data-testid="comments"
        id="comments"
        rows="4"
      />
    </div>
    <div
      className="row form-group mx-auto mb-2"
    >
      <input
        aria-label="submit"
        className="col btn btn-primary my-2 px-5"
        data-testid="submit"
        name="submit"
        type="submit"
        value="Submit"
      />
      <input
        aria-label="reset"
        className="col btn btn-secondary mx-1 my-2 px-5"
        data-testid="reset"
        name="reset"
        type="reset"
        value="Reset"
      />
    </div>
  </form>
</div>
`;

exports[`Home render to match snapshot when newGame is false 1`] = `
<div>
  <div
    className="container mx-auto text-center"
  >
    <h1
      className="display-1"
    >
      Tic-Tac-Toe
    </h1>
  </div>
  <div
    className="container-sm w-50"
  >
    <div
      aria-label="row-0"
      className="row"
    >
      <div
        aria-label="cell 0"
        className="col cell text-center"
        id="0"
        onClick={[Function]}
      />
      <div
        aria-label="cell 1"
        className="col cell text-center"
        id="1"
        onClick={[Function]}
      />
      <div
        aria-label="cell 2"
        className="col cell text-center"
        id="2"
        onClick={[Function]}
      />
    </div>
    <div
      aria-label="row-1"
      className="row text-center"
    >
      <div
        aria-label="cell 3"
        className="col cell text-center"
        id="3"
        onClick={[Function]}
      />
      <div
        aria-label="cell 4"
        className="col cell text-center"
        id="4"
        onClick={[Function]}
      />
      <div
        aria-label="cell 5"
        className="col cell text-center"
        id="5"
        onClick={[Function]}
      />
    </div>
    <div
      aria-label="row-2"
      className="row"
    >
      <div
        aria-label="cell 6"
        className="col cell text-center"
        id="6"
        onClick={[Function]}
      />
      <div
        aria-label="cell 7"
        className="col cell text-center"
        id="7"
        onClick={[Function]}
      />
      <div
        aria-label="cell 8"
        className="col cell text-center"
        id="8"
        onClick={[Function]}
      />
    </div>
    <div
      className="row"
      style={
        Object {
          "margin": "20px",
        }
      }
    />
    <div
      className="row"
    >
      <div
        aria-label="message board"
        className="col message text-center"
        id="user_message"
      />
    </div>
  </div>
</div>
`;

exports[`Home render to match snapshot when newGame is true 1`] = `
<div>
  <div
    className="container mx-auto text-center"
  >
    <h1
      className="display-1"
    >
      Tic-Tac-Toe
    </h1>
  </div>
  <div
    className="container-sm w-50"
  >
    <div
      aria-label="row-0"
      className="row"
    >
      <div
        aria-label="cell 0"
        className="col cell text-center"
        id="0"
        onClick={[Function]}
      />
      <div
        aria-label="cell 1"
        className="col cell text-center"
        id="1"
        onClick={[Function]}
      />
      <div
        aria-label="cell 2"
        className="col cell text-center"
        id="2"
        onClick={[Function]}
      />
    </div>
    <div
      aria-label="row-1"
      className="row text-center"
    >
      <div
        aria-label="cell 3"
        className="col cell text-center"
        id="3"
        onClick={[Function]}
      />
      <div
        aria-label="cell 4"
        className="col cell text-center"
        id="4"
        onClick={[Function]}
      />
      <div
        aria-label="cell 5"
        className="col cell text-center"
        id="5"
        onClick={[Function]}
      />
    </div>
    <div
      aria-label="row-2"
      className="row"
    >
      <div
        aria-label="cell 6"
        className="col cell text-center"
        id="6"
        onClick={[Function]}
      />
      <div
        aria-label="cell 7"
        className="col cell text-center"
        id="7"
        onClick={[Function]}
      />
      <div
        aria-label="cell 8"
        className="col cell text-center"
        id="8"
        onClick={[Function]}
      />
    </div>
    <div
      className="row"
      style={
        Object {
          "margin": "20px",
        }
      }
    />
    <div
      className="row"
    >
      <div
        aria-label="message board"
        className="col message text-center"
        id="user_message"
      />
    </div>
  </div>
</div>
`;

exports[`HowToPlay render to match snapshot 1`] = `
<div
  className="howtoplay_container"
>
  <h1
    aria-label="How To Play Tic-Tac-Toe header"
    className="display-1 text-center howtoplay_header"
    data-testid="how_to_header"
  >
    How to Play Tic-Tac-Toe
  </h1>
  <p
    aria-label="require 2 players"
    data-testid="two_players"
  >
    This game is played with two players
  </p>
  <div>
    <p
      data-testid="rules"
    >
      Rules:
    </p>
    <ul
      aria-label="rules list"
      data-testid="list_of_rules"
    >
      <li>
        The first player enter their name to connect will be 'Player 1'
      </li>
      <li>
        The second player to enter their name to connect will be 'Player 2'
      </li>
      <li>
        Player 1 needs to wait until there is a Player 2
      </li>
      <li>
        Player 1 is assigned the symbol 'X' and Player 2 is assigned the symbol 'O'
      </li>
      <li>
        Once there are two players, the game screen will load the 3x3 board
      </li>
      <li>
        The game is played by clicking on a square of the board
      </li>
      <li>
        If the move is valid, the chosen square will be marked by the player's symbol
      </li>
      <li>
        Whoever is the first to connect 3 of their symbols horizontally, vertically, or diagonally wins the game
      </li>
      <li>
        The game will end in a tie if all squares are filled but no one has connected 3 of their symbols
      </li>
    </ul>
  </div>
  <div>
    <p
      aria-label="example wins"
      data-testid="wins"
    >
      Example Wins:
    </p>
    <pre
      aria-label="horizontal wins"
      data-testid="h_wins"
    >
      <p>
         X | X | X       |   |          |   |   
-----------   -----------    -----------
   |   |       X | X | X        |   |
-----------   -----------    -----------
   |   |         |   |        X | X | X 
      </p>
    </pre>
    <p />
    <pre
      aria-label="vertical wins"
      data-testid="v_wins"
    >
      <p>
         O |   |         | O |          |   | O 
-----------   -----------    -----------
 O |   |         | O |          |   | O
-----------   -----------    -----------
 O |   |         | O |          |   | O
      </p>
    </pre>
    <p />
    <pre
      aria-label="diagonal wins"
      data-testid="d_wins"
    >
      <p>
         X |   |         |   | O
-----------   -----------
   | X |         | O |   
-----------   -----------
   |   | X     O |   |    
      </p>
    </pre>
  </div>
  <div>
    <p
      aria-label="example tied"
      data-testid="ties"
    >
      Example Tied Conditions:
    </p>
    <pre
      aria-label="tied game"
      data-testid="tied_ex"
    >
      <p>
         X | O | X     X | O | O      X | X | O
-----------   -----------    -----------
 X | X | O     X | O | X      O | O | X
-----------   -----------    -----------
 O | O | X     O | X | X      X | X | O 
      </p>
    </pre>
  </div>
  <div>
    <p
      aria-label="enjoy"
      data-testid="enjoy"
    >
      Hope you enjoy the game!
    </p>
  </div>
</div>
`;
